# reconcile

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  setup.cfg  taplo.toml
.github/workflows/: lint_python.yml  pre-commit.yml  reconcile_on_demand.yml
reconcile/: __init__.py  database.py  datatypes.py  dump_reader.py  fetch.py  internet_archive.py  main.py  openlibrary_editions.py  openlibrary_works.py  redirect_resolver.py  reports.py  types.py  utils.py
tests/: seed_ia_inlibrary.jsonl  seed_ia_physical_direct.tsv  seed_ol_dump_all.txt  seed_ol_dump_editions.txt  test_dump_reader.py  test_internet_archive.py  test_openlibrary_works.py  test_reconcile.py  test_redirect_resolver.py  test_reports.py  test_types.py  test_utils.py
