[tool.poetry]
name = "reconcile"
version = "0.1.0"
description = ""
authors = ["Scott Barnes <scottreidbarnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.7.11"
fire = "^0.4.0"
requests = "^2.28.1"
polars = "^0.14.1"
tqdm = "^4.64.0"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
ipython = "^8.4.0"
coverage = "^6.4.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["reconcile"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]
