[tool.poetry]
  name = "reconcile"
  version = "0.1.0"
  description = ""
  authors = ["Scott Barnes <scottreidbarnes@gmail.com>"]

  [tool.poetry.dependencies]
    python = "^3.11"
    orjson = "^3.7.11"
    requests = "^2.31.0"
    tqdm = "^4.64.0"
    configparser = "^5.2.0"
    isbnlib = "^3.10.10"
    lmdbm = "^0.0.5"
    typer = { extras = ["all"], version = "^0.6.1" }

  [tool.poetry.dev-dependencies]
    pytest = "^7.1.2"
    black = "^22.6.0"
    isort = "^5.10.1"
    ipython = "^8.10.0"
    coverage = "^6.4.3"
    pre-commit = "^2.20.0"
    flake8-simplify = "^0.19.3"
    pylsp-mypy = "^0.6.2"
    pylsp-rope = "^0.1.10"
    codespell = "^2.2.1"

[build-system]
  requires = ["poetry-core>=1.0.0"]
  build-backend = "poetry.core.masonry.api"

[tool.coverage]
  # https://github.com/nedbat/coveragepy
  [tool.coverage.run]

    source = ["reconcile"]
    branch = true
    omit = ['']

  [tool.coverage.report]
    exclude_lines = ["# noqa", "raise NotImplementedError"]

[tool.mypy]
  disallow_any_generics = true
  disallow_untyped_decorators = false
  disallow_untyped_defs = true
  exclude = ['tests/']
  ignore_missing_imports = true
  no_site_packages = true
  pretty = true
  scripts_are_modules = true
  show_error_codes = true
  show_error_context = true
  strict = true
  strict_optional = true
  warn_return_any = true

  [[tool.mypy.overrides]]
    module = "tests.*"
    ignore_errors = true
